# user-service

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  schema.prisma
tests/tests_v1/: test_users.py
user_service/api/v1/: models.py
user_service/api/v1/endpoints/: user.py  users.py
user_service/prisma/: database.py  partial_types.py
